VPC/nat.tf
# nat gw
resource "aws_eip" "nat" {
  vpc = true
}

resource "aws_nat_gateway" "nat-gw" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.publicSubnet.id
  depends_on    = [aws_internet_gateway.igw]
}

# VPC setup for NAT
resource "aws_route_table" "private-rt" {
  vpc_id = aws_vpc.terraformVPC.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat-gw.id
  }

  tags = {
    Name = "private_rt"
  }
}

# route associations private
resource "aws_route_table_association" "private-rt" {
  subnet_id      = aws_subnet.privateSubnet.id
  route_table_id = aws_route_table.private-rt.id
}
